--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://yourusername.github.io/Home/"
+baseURL = "https://www.amybell.info/"
 title = "Amy Bell"
 languageCode = "en"
 enableInlineShortcodes = true
